# nextdnsctl

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  Makefile  NOTICE  README.md  build.rs
.github/workflows/: release.yml
src/: api.rs  config.rs  main.rs  update.rs
