[package]
name = "nextdns-cli"
version = "1.1.0"
edition = "2024"
description = "CLI tool for interacting with NextDNS API"

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
